Fix: Menu clickable on mobile when not open

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -450,7 +450,7 @@ color: black;
             position: absolute;
             transition: height 0.5s ease-out;
             span{
-                display: block;
+                display: none;
                 text-align: center;
                 opacity: 0;
                 margin: 2em 0;
@@ -463,6 +463,7 @@ color: black;
         
         .nav_open{
             span{
+                display: block !important;
                 opacity: 1;
                 a{color: white}
                 button{
